--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -163,7 +163,7 @@
                     <h4><i class="fa fa-money"></i> Seleccione el método de pago</h4>
                     <hr>
                     <md-radio-group layout="row" ng-model="Payment.orderPaymentType">
-                        <md-radio-button value="10" ng-click="Payment.paypal=!Payment.paypal"
+                        <md-radio-button value="8" ng-click="Payment.paypal=!Payment.paypal"
                             class="md-primary">
                             Tarjeta
                         </md-radio-button>
@@ -195,121 +195,16 @@
                     </div>
                     <div class="items-dashboard" ng-if="Payment.orderPaymentType === '8'">
                         <div class="container">
-                            <div class="row">
-                                <form id="pay" name="pay"
-                                      ng-submit="Payment.processPaymentCard()">
-                                    <div class="col-xs-12">
-                                        <md-input-container md-no-float class="md-block">
-                                            <label>Nombre como aparece en la tarjeta</label>
-                                            <input type="text" ng-model="Payment.params.name" id="cardholderName"
-                                                   data-checkout="cardholderName" name="name" required>
-                                                <div ng-messages="pay.name.$error" aria-live="assertive">
-                                                    <!-- ngMessage: required -->
-                                                    <div ng-message="required">Este campo es requerido.</div>
-                                                    <!-- ngMessage: maxlength -->
-                                                </div>
-                                        </md-input-container>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <md-input-container md-no-float class="md-block">
-                                                <label>Número de tarjeta</label>
-                                                <input type="text" ng-pattern="/^[0-9]*$/" maxlength="18"
-                                                       id="cardNumber" data-checkout="cardNumber"
-                                                       ng-model="Payment.params.cardNumber" name="cardNumber" required>
-                                                    <div ng-messages="pay.cardNumber.$error" aria-live="assertive">
-                                                        <!-- ngMessage: required -->
-                                                        <div ng-message="required">Este campo es requerido.</div>
-                                                        <div ng-message="maxlength">Deben ser solo 18 dígitos.</div>
-                                                        <div ng-message="pattern">Formato no válido, omite espacios en blanco o guion medios</div>
-                                                        <!-- ngMessage: maxlength -->
-                                                    </div>
-                                            </md-input-container>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <div class="row">
-                                                    <div class="col-md-6">
-                                                        <md-input-container md-no-float class="md-block">
-                                                            <label>Mes</label>
-                                                            <input type="text" maxlength="2" ng-pattern="/^[0-9]*$/"
-                                                                   ng-model="Payment.params.month"
-                                                                   id="cardExpirationMonth" name="month"
-                                                                   data-checkout="cardExpirationMonth" maxlength="2" minlength="2" required>
-                                                                   <div ng-messages="pay.month.$error" aria-live="assertive">
-                                                                        <!-- ngMessage: required -->
-                                                                        <div ng-message="required">Este campo es requerido.</div>
-                                                                        <div ng-message="maxlength">Deben ser sólo dos dígitos.</div>
-                                                                        <div ng-message="pattern">Deben ser solo números.</div>
-                                                                        <div ng-message="minlength">Deben ser 2 dígitos.</div>
-                                                                        <!-- ngMessage: maxlength -->
-                                                                    </div>
-                                                        </md-input-container>
-                                                    </div>
-                                                    <div class="col-md-6">
-                                                        <md-input-container md-no-float class="md-block"
-                                                                            ng-class="{ 'has-error': Form.cardExpiryY.$touched && Form.cardExpiryY.$invalid }">
-                                                            <label>Año</label>
-                                                            <input type="text" maxlength="4" ng-pattern="/^[0-9]*$/"
-                                                                   ng-model="Payment.params.year"
-                                                                   id="cardExpirationYear" name="year"
-                                                                   data-checkout="cardExpirationYear" maxlength="4" minlength="4"  required>
-                                                                   <div ng-messages="pay.year.$error" aria-live="assertive">
-                                                                        <!-- ngMessage: required -->
-                                                                        <div ng-message="required">Este campo es requerido.</div>
-                                                                        <div ng-message="maxlength">Deben ser sólo 4 dígitos.</div>
-                                                                        <div ng-message="minlength">Deben ser 4 dígitos.</div>
-                                                                        <div ng-message="pattern">Deben ser solo números.</div>
-                                                                        <!-- ngMessage: maxlength -->
-                                                                    </div>
-                                                        </md-input-container>
-                                                    </div>
-                                                </div>
+                            <div class="row justify-content-center text-center">
+                                <button ng-if="!Payment.busyPaypal" class="btn btn-danger"
+                                ng-click="Payment.createOrderStripe()">Realizar el pago<span
+                                ng-show="Payment.busyPaypal"><i class="fa fa-spinner fa-spin"></i>
+                            </span>
+                        </button>
+                                <div class="col-md-12" ng-click="Payment.createOrderStripe()">
+                                    <img src="https://mmcb.b-cdn.net/media/attachments/f/7/7/3/daea730bf8265165ee3fc5cf1a474ff1e5c952b6e1d72120707cc1825559/metodos-de-pago.png" alt="" width="320">
+                                </div>
 
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-xs-12 col-md-6">
-                                            <md-input-container md-no-float class="md-block"
-                                                                ng-class="{ 'has-error': Form.cardCVC.$touched && Form.cardCVC.$invalid }">
-                                                <label>CVC</label>
-                                                <input type="text" maxlength="4" minlength="3" ng-pattern="/^[0-9]*$/"
-                                                       id="securityCode" data-checkout="securityCode" name="cvc"
-                                                       ng-model="Payment.params.cvc" required>
-                                                       <div ng-messages="pay.cvc.$error" aria-live="assertive">
-                                                            <!-- ngMessage: required -->
-                                                            <div ng-message="required">Este campo es requerido.</div>
-                                                            <div ng-message="maxlength">Deben ser sólo 3 o 4 dígitos.</div>
-                                                            <div ng-message="minlength">Deben ser sólo 3 o 4 dígitos.</div>
-                                                            <!-- ngMessage: maxlength -->
-                                                        </div>
-                                            </md-input-container>
-                                        </div>
-                                        <input type="hidden" id="paymentMethodId" data-checkout="paymentMethodId"
-                                               ng-model="Payment.params.paymentMethodId"/>
-                                        <div class="col-xs-12 col-md-6 text-right">
-                                            <div style="margin-top: 30px;">
-                                                <img class="img-fluid"
-                                                     src="../../img/accepted_c22e0.png">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="container">
-                                        <div class="row justify-content-md-end">
-                                            <div class="">
-                                                <button ui-sref="shipping-address" class="btn btn-outline-default">
-                                                    Volver a dirección de envío
-                                                </button>
-                                                <button ng-disabled="pay.$invalid || Payment.busyCreditCard"
-                                                        class="btn btn-danger" type="submit">
-                                                    Realizar Pago <span ng-show="Payment.busyCreditCard"><i
-                                                        class="fa fa-spinner fa-spin"></i></span>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
                             </div>
                         </div>
                     </div>
