--- a/app/templates/shop/partials/purchase-completed.html
+++ b/app/templates/shop/partials/purchase-completed.html
@@ -5,33 +5,54 @@
                 <h2 class="text-center">{{ Purchase.purchase.customerName }}</h2>
                 <hr>
                 <h3 class="text-center"><i class="fa fa-smile-o"></i> Gracias por tu compra en
-                    {{initConfig.branchOffice}}.</h3>
+                    {{Purchase.purchase.storeInfo.businessName}}.</h3>
                 <br>
                 <p> Hemos enviado a tu correo <strong> {{ Purchase.purchase.customerEmail}}</strong> toda la información
                     referente
                     a tu compra, si tienes dudas o algo adicional que comentar comunicate con nosotros al teléfono <a
                             href="tel:{{initConfig.phone}}"> <i
-                            class="fa fa-phone"></i> {{initConfig.phone}} </a> un asesor de {{initConfig.branchOffice}}
-                    te atenderá.</p>
+                            class="fa fa-phone"></i> {{initConfig.phone}} </a> un asesor te atenderá.</p>
                 <hr>
                 <div id="purchase-payment">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-4 text-left no-padding">
-                                <span>Estatus: {{Purchase.purchase.orderStatusName}}</span>
+                                <span>{{ Purchase.purchase.createdAt | date: 'd/M/y' }}</span>
                             </div>
-                            <div class="col-md-4 text-center no-padding"><span>Pago: {{Purchase.purchase.paymentTypeName}}</span>
+                            <div class="col-md-4 text-center no-padding">
+                                <span ng-if="Purchase.purchase.isPaid == 0" class="badge badge-success">
+                                    {{ Purchase.purchase.isPaidName }}
+                                </span>
+                                <span ng-if="Purchase.purchase.isPaid == 1" class="badge badge-warning">
+                                    {{ Purchase.purchase.isPaidName }}
+                                </span>
+                                <span ng-if="Purchase.purchase.isPaid == 2" class="badge badge-danger">
+                                    {{ Purchase.purchase.isPaidName }}
+                                </span>
+                                <span ng-if="Purchase.purchase.isPaid == 3" class="badge badge-success">
+                                    {{ Purchase.purchase.isPaidName }}
+                                </span>
+                                <span ng-if="Purchase.purchase.isPaid == 4" class="badge badge-primary">
+                                    {{ Purchase.purchase.isPaidName }}
+                                </span>
+                                <span ng-if="Purchase.purchase.isPaid == 5" class="badge badge-info">
+                                    {{ Purchase.purchase.isPaidName }}
+                                </span>
+                                <span ng-if="Purchase.purchase.isPaid == 6" class="badge badge-success">
+                                    {{ Purchase.purchase.isPaidName }}
+                                </span>
+                                <span ng-if="Purchase.purchase.isPaid == 7" class="badge badge-warning">
+                                    {{ Purchase.purchase.isPaidName }}
+                                </span>
+                                <span ng-if="Purchase.purchase.isPaid == 8" class="badge badge-info">
+                                    {{ Purchase.purchase.isPaidName }}
+                                </span>
                             </div>
-                            <div class="col-md-4 text-right no-padding"><span>Pedido: #{{ Purchase.purchase.id }}</span>
+                            <div class="col-md-4 text-right no-padding"><span>Pedido: #{{ Purchase.purchase.code ? Purchase.purchase.code : Purchase.purchase.id }}</span>
                             </div>
                         </div>
                     </div>
                     <hr>
-                    <div class="container">
-                        <div class="row">
-                            <span>Realizado el {{ Purchase.purchase.createdAt | date: 'd/M/y' }}</span><br>
-                        </div>
-                    </div>
                     <br>
                     <div class="">
                         <div class="table-responsive">
