add click on search button

--- a/app/templates/partials/header.html
+++ b/app/templates/partials/header.html
@@ -16,7 +16,7 @@
                     <md-input-container md-no-float>
                         <input id="validationServerUsername" placeholder="Buscar"
                                aria-describedby="inputGroupPrepend3" ng-model="Search.searchTerm" required>
-                        <md-icon class="fa fa-search"></md-icon>
+                        <md-icon class="fa fa-search" ng-click="Search.globalSearch('product')"></md-icon>
                     </md-input-container>
                 </form>
             </div>
