change payment card

--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -59,7 +59,7 @@
                                         </div>
                                     </form>
                                     <div class="row">
-                                        <div class="col-sm-12">
+<!--                                         <div class="col-sm-12">
                                             <button id="shopNow" ng-click="Shop.setItem({id: Product.detail.id, name: Product.detail.name,
                                                 price: Product.detail.price, image: Product.detail.featuredImage.url,
                                                 qty: Product.detail.qty, taxonomies : Product.detail.taxonomies,
@@ -68,7 +68,7 @@
                                                 priceList: Product.detail.priceList, prices: Product.detail.prices}, Product.detail.qty, true)"
                                                 ng-disabled="Shop.itemInCart(Product.detail.id) || FormQty.$invalid || Product.detail.kind ==='group' || Product.detail.inventory <= 0"
                                                 class="btn btn-black col-sm-8" style="margin-bottom: 10%;"><i class="fa fa-dollar"></i> Compra rápida                              </button>
-                                        </div>
+                                        </div> -->
                                         <div class="col-sm-12">
                                             <button id="addCart" ng-click="Shop.setItem({id: Product.detail.id, name: Product.detail.name,
                                                 price: Product.detail.price, image: Product.detail.featuredImage.url,
