--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -179,17 +179,15 @@
                     <div class="items-dashboard" ng-if="Payment.orderPaymentType === '10'">
                         <div class="container">
                             <div class="row justify-content-center text-center">
-                                <div class="col-md-12">
-                                    <!--<p>Luego de hacer clic en "Finalizar el pedido", serás
-                                        redirigido a PayPal para completar tu compra de forma segura.</p>-->
-                                    <img src="../../img/mercado-pago.png" alt="" width="200">
-                                    <p>Realice su pago, con la facilidad de Mercado Pago.</p>
-                                </div>
                                 <button ng-if="!Payment.busyPaypal" class="btn btn-danger"
-                                        ng-click="Payment.createOrder()">Realizar el pago<span
-                                        ng-show="Payment.busyPaypal"><i class="fa fa-spinner fa-spin"></i>
-                                    </span>
-                                </button>
+                                ng-click="Payment.createOrder()">Realizar el pago<span
+                                ng-show="Payment.busyPaypal"><i class="fa fa-spinner fa-spin"></i>
+                            </span>
+                        </button>
+                                <div class="col-md-12" ng-click="Payment.createOrder()">
+                                    <img src="https://mmcb.b-cdn.net/media/attachments/f/7/7/3/daea730bf8265165ee3fc5cf1a474ff1e5c952b6e1d72120707cc1825559/metodos-de-pago.png" alt="" width="320">
+                                </div>
+
                             </div>
                         </div>
                     </div>
