remove guest purchase

--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -32,8 +32,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="table-responsive col-md-12" loading-container="Panel.tableParams.settings().$loading">
-                            <table class="table table-bordered bg-white table-striped" ng-table="Panel.tableParams"
+                        <div class="table-responsive" loading-container="Panel.tableParams.settings().$loading">
+                            <table class="table table-bordered" ng-table="Panel.tableParams"
                                 show-filter="false">
                                 <tbody>
                                     <tr ng-repeat="purchase in Panel.purchaseRecent" datasource="purchase" ref="Panel">
