--- a/app/templates/auth/partials/validate_account.html
+++ b/app/templates/auth/partials/validate_account.html
@@ -3,10 +3,8 @@
         <div class="container">
             <div class="text-center">
                 <h1><i class="ion-ios-checkmark"></i> Registro correcto</h1><br>
-                <p>Hemos enviado a tu correo electrónico un código de verificación.<br>
-                    Por favor ingresa a tu correo para activar tu cuenta <br>
-                    ¿Ya has validado tu cuenta?</p>
-                <a ui-sref="register" class="btn btn-outline-danger">Iniciar sesión</a> <br><br>
+                <p>Para seguir con tu compra inicia sesión con los datos que recien llenaste.</p>
+                <a ui-sref="register({'action':'login'})" class="btn btn-outline-danger">Iniciar sesión</a> <br><br>
             </div>
         </div>
     </section>
