--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -149,15 +149,19 @@
                                 </table>
                             </div>
                             <div ng-controller="AccessCtrl as Access">
-                                <button ng-if="Access.isAuthenticated() && ShopCart.total >= ShopCart.minimumPurchase" class="btn btn-black btn-block" ng-click="ShopCart.processPurchase()"
-                                     ng-disabled="itemsForm.$invalid"><i
-                                    class="fa fa-credit-card"></i> Procesar compra
-                                </button>
-
-                                <button ng-if="!Access.isAuthenticated() && ShopCart.total >= ShopCart.minimumPurchase" class="btn btn-black btn-block" ui-sref="shipping-address({intent:'guest'})"
-                                     ng-disabled="itemsForm.$invalid"><i
-                                class="fa fa-credit-card"></i> Procesar compra
-                            </button>
+                                <div ng-if="!guestPurchase">
+                                    <button ng-if="ShopCart.total >= ShopCart.minimumPurchase" class="btn btn-black btn-block" ng-click="ShopCart.processPurchase()"
+                                        ng-disabled="itemsForm.$invalid"><i
+                                       class="fa fa-credit-card"></i> Procesar compra
+                                   </button>
+                                </div>
+                                <!--validar compra como invitado-->
+                                <div ng-if="guestPurchase">
+                                    <button ng-if="!Access.isAuthenticated() && ShopCart.total >= ShopCart.minimumPurchase" class="btn btn-black btn-block" ui-sref="shipping-address({intent:'guest'})"
+                                        ng-disabled="itemsForm.$invalid"><i
+                                        class="fa fa-credit-card"></i> Procesar compra
+                                    </button>
+                                </div>
 
                             </div>
 
